Set the width of the dropdown menu to prevent control panel elements from wrapping.

--- a/eems_online_app/static/css/base.css
+++ b/eems_online_app/static/css/base.css
@@ -778,4 +778,7 @@ ul.buttons li.selected a:hover
 	/* background:#58C00D; */
 }
 
+#eems_model_dropdown {
+	width:133px;
+}
 
